# FastApiBank

./: .gitignore  Dockerfile  README.md  alembic.ini  check_currency.py  docker-compose.yml  log.ini  main.py  pyproject.toml
core/: auth.py  config.py  security.py
migrations/: env.py
migrations/testversions/: f86ea90091c9_migration.py
migrations/versions/: 1111111111_migration.py
models/: accounts.py  accounttype.py  customers.py  database.py
routers/: customers.py  dnarout.py
schemas/: schema.py
tasks/: check_currency.py
tests/: conftest.py  migrate_util.py  test_customers.py  test_health_check.py
utils/: customers.py  deps.py  mailutils.py
utils/email-templates/src/: new_account.mjml
